cluster/manifests/slack-logger/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: slack-logger
  labels:
    name: slack-logger
    pod-security.kubernetes.io/enforce: baseline
