cluster/manifests/slack-logger/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: slack-logger
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: slack-logger
      app.kubernetes.io/component: ""
  mtls:
    mode: STRICT
