cluster/manifests/slack-logger/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: slack-logger
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: slack-logger
      app.kubernetes.io/component: ""
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./slack-logger-tidb.slack-logger.svc.cluster.local
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: tidb-stats-exporter
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: slack-logger
      app.kubernetes.io/component: tidb-stats-exporter
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./slack-logger-tidb.slack-logger.svc.cluster.local
        - http-kvs/http-kvs.http-kvs.svc.cluster.local
        - istio-system/istiod.istio-system.svc.cluster.local
